objects/Billing_Account__c.object
<CustomObject>
    <fields>
        <fullName>Activation_Date__c</fullName>
        <label>Activation Date</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>BAIdentifier__c</fullName>
        <externalId>true</externalId>
        <label>BAIdentifier</label>
        <length>100</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Bill_Format__c</fullName>
        <label>Bill Format</label>
        <length>100</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Bill_Type_Description__c</fullName>
        <label>Bill Type Description</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Bill_Type__c</fullName>
        <label>Bill Type</label>
        <length>100</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Billing_Account_Number__c</fullName>
        <label>Billing Account Number</label>
        <length>18</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Billing_Address_Id__c</fullName>
        <label>Address Id</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Billing_Frequency__c</fullName>
        <label>Billing Frequency</label>
        <length>100</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Billing_Period__c</fullName>
        <label>Billing Period</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Billing_Suppressed_Flag__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Billing Suppressed Flag</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Currency__c</fullName>
        <label>Currency</label>
        <length>25</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Customer_Number__c</fullName>
        <label>Customer Number</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Is_Protected__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Is Protected</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Language__c</fullName>
        <label>Language</label>
        <length>50</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Legal_Entity_Id__c</fullName>
        <label>Legal Entity Id</label>
        <length>50</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Opportunity_Id__c</fullName>
        <label>Opportunity Id</label>
        <length>18</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Payment_Method_Description__c</fullName>
        <label>Payment Method Description</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Payment_Method__c</fullName>
        <label>Payment Method</label>
        <length>50</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Payment_Reminder_Tobe_Sent__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Payment Reminder Tobe Sent</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Revenue_Segment__c</fullName>
        <label>Revenue Segment</label>
        <length>100</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Service_Segment__c</fullName>
        <label>Service Segment</label>
        <length>100</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Status__c</fullName>
        <label>Status</label>
        <length>20</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Type__c</fullName>
        <label>Type</label>
        <length>100</length>
        <type>Text</type>
    </fields>
    <label>Cafe Billing Account</label>
    <listViews>
        <fullName>All</fullName>
        <columns>NAME</columns>
        <columns>Billing_Account_Number__c</columns>
        <columns>Customer_Number__c</columns>
        <columns>Billing_Address_Id__c</columns>
        <columns>LAST_UPDATE</columns>
        <columns>BAIdentifier__c</columns>
        <filterScope>Everything</filterScope>
        <label>All</label>
        <language>en_US</language>
    </listViews>
    <nameField>
        <displayFormat>{0000}</displayFormat>
        <label>SFDC Billing Account #</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Cafe Billing Account</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>